- Changed follow to use toggle logic - Added query searching in GET feed methods